New in version 0.98.2 (xxx 2009)
 * Fix error in optional GATE/OpenNLP build.

New in version 0.98.1: (Jaunary 2009)
 * Expose the new link-grammar "disjunct string" API
   (this requires link-grammar version 4.4.2).
 * Add comment delimiters to the frame rules file.
 * Fix, now supports jwnl-1.4rc2
 * Add initial OWL-format output.
 * Make install/use of GATE and OpenNLP optional.
 * Cleanup README to be clearer on how to use RelEx.

New in version 0.98.0:  (December 2008) 
 * Bumper version number, in preparation for a 1.0 release.
 * New JSON interface to the link-grammar perser, for improved server
   performance.

New in version 0.10.1:
 * remove cleanSentenceString(), replace with entity id's.
 * Avoid printing parens in the constituent string.
 * Add a pom.xml file for use with Maven.

New in version 0.8.4:
 * Convert DocSplitter to factory, so that the OpenNLP install is optional.