@@ -1,0 +1,30 @@
+/*
+ * Copyright 2009 Novamente LLC
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package relex;
+
+/**
+ * The Version class provides the package version string.
+ */
+public class Version
+{
+	private static final String VERSION = "@REVISION@";
+
+	static public String getVersion()
+	{
+		return "relex-" + VERSION;
+	}
+}
+
